--- a/source/form.html
+++ b/source/form.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ru">
+<div lang="ru">
 
 <head>
   <meta charset="UTF-8">
@@ -77,12 +77,14 @@
           Мы будем рады воплотить в жизнь ваши пожелания!
           Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.
         </p>
-        <form action="https://echo.htmlacademy.ru">
-          <div class="form__fieldset">
+      </div>
+      <form action="https://echo.htmlacademy.ru">
+        <div class="form__fieldset">
+          <div class="form__inner">
             <p class="form__legend form__legend-line">Тип</p>
             <div class="form__radio">
               <div class="form__interior">
-                <input class="visually-hidden" id="interior"type="radio" name="type" value="interior" checked>
+                <input class="visually-hidden" id="interior" type="radio" name="type" value="interior" checked>
                 <label class="form__style-text form__text-indentation" for="interior">
                   Аксессуар для интерьера
                 </label>
@@ -95,7 +97,9 @@
               </div>
             </div>
           </div>
-          <div class="form__fieldset">
+        </div>
+        <div class="form__fieldset form__fieldset-background">
+          <div class="form__inner">
             <p class="form__legend form__legend-line">Цвет</p>
             <div class="form__checkbox">
               <input class="visually-hidden" id="white" name="color" value="white" type="checkbox" checked>
@@ -112,41 +116,56 @@
               <label class="form__style-text form__text-indentation" for="orange">Оранжевый</label>
             </div>
           </div>
-          <div class="form__fieldset">
+        </div>
+        <div class="form__fieldset">
+          <div class="form__inner">
             <p class="form__legend form__legend-line">Фио</p>
             <div class="form__name">
-              <label class="form__style-text form__text-mb" for="first-name">Имя:</label>
-              <input class="form__placeholder form__placeholder-mb"
-                      id="first-name" type="text" placeholder="Введите ваше имя*">
-              <label class="form__style-text form__text-mb" for="last-name">Фамилия:</label>
-              <input class="form__placeholder form__placeholder-mb"id="last-name" type="text" placeholder="Укажите фамилию*">
-              <label class="form__style-text form__text-mb" for="father-name">Отчество:</label>
-              <input class="form__placeholder"
-                      id="father-name" type="text" placeholder="Отчество, если желаете">
+              <div class="form__first-name">
+                <label class="form__style-text form__text-mb" for="first-name">Имя:</label>
+                <input class="form__placeholder form__placeholder-mb"
+                        id="first-name" type="text" placeholder="Введите ваше имя*">
+              </div>
+              <div class="form__last-name">
+                <label class="form__style-text form__text-mb" for="last-name">Фамилия:</label>
+                <input class="form__placeholder form__placeholder-mb"id="last-name" type="text" placeholder="Укажите фамилию*">
+              </div>
+              <div class="form__father-name">
+                <label class="form__style-text form__text-mb" for="father-name">Отчество:</label>
+                <input class="form__placeholder"
+                        id="father-name" type="text" placeholder="Отчество, если желаете">
+              </div>
             </div>
           </div>
-          <div class="form__fieldset">
-            <p class="form__legend form__legend-line">Тел</p>
-            <label for="number-phone"></label>
-            <input class="form__placeholder" id="number-phone" type="tel" pattern="2[0-9]{3}-[0-9]{3}"
-                    placeholder="+7 XXX XXX XX XX*" required>
+        </div>
+        <div class="form__fieldset form__fieldset-background">
+          <div class="form__inner form__inner-column">
+            <div class="form__wrapper-phone">
+              <p class="form__legend form__legend-line">Тел</p>
+              <label for="number-phone"></label>
+              <input class="form__placeholder form__placeholder-tel" id="number-phone" type="tel" pattern="2[0-9]{3}-[0-9]{3}" placeholder="+7 XXX XXX XX XX*" required>
+            </div>
+            <div class="form__wrapper-email">
+              <p class="form__legend form__legend-line">Email</p>
+              <label for="email"></label>
+              <input class="form__placeholder form__placeholder-email" id="email" type="email" placeholder="Ваш Email*" required>
+            </div>
           </div>
-          <div class="form__fieldset">
-            <p class="form__legend form__legend-line">Email</p>
-            <label for="email"></label>
-            <input class="form__placeholder" id="email" type="email" placeholder="Ваш Email*" required>
-          </div>
-          <div class="form__fieldset">
+        </div>
+        <div class="form__fieldset">
+          <div class="form__inner">
             <p class="form__legend form__legend-line">Доп</p>
-            <label>
+            <label class="form__textarea">
               <textarea class="form__textarea-text" name="form-text" id="form-text"
                           placeholder="Опишите все ваши пожелания к заказу"></textarea>
             </label>
           </div>
+        </div>
+        <div class="form__inner form__inner-required">
           <small class="form__require"><sup>*</sup>Поля обязательны для заполнения</small>
           <button class="form__btn button" type="submit">Отправить заказ</button>
-        </form>
-      </div>
+        </div>
+      </form>
     </section>
 
   </main>
