--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Мишка - главная: HTML Academy</title>
   <link rel="stylesheet" href="css/normalize.css">
@@ -19,7 +19,7 @@
       <nav class="header__menu menu">
         <a class="header__logo logo">
           <img class="logo__image" src="img/logo-mobile.svg"
-                srcset="img/logo-mobile.svg 767w,img/logo-tablet.svg 1149w,img/logo-desktop.svg" alt="Логотип">
+            srcset="img/logo-mobile.svg 767w,img/logo-tablet.svg 1149w,img/logo-desktop.svg" alt="Логотип">
         </a>
         <button class="menu__btn" type="button" aria-label="Открыть меню">
           <span class="menu__line"></span>
@@ -65,7 +65,7 @@
     <!-- Для ридера -->
     <h1 class="visually-hidden">Интернет-магазин Мишка - главная страница</h1>
 
-<!-- Секция ручной работы -->
+    <!-- Секция ручной работы -->
     <section class="handwork">
       <div class="handwork__title">
         <p class="handwork__text">Милые штуки ручной работы для дома</p>
@@ -74,21 +74,21 @@
         <a href="catalog.html" class="handwork__interior">
           <div class="handwork__inner handwork__flex-g">
             <p class="handwork__category">Предметы интерьера</p>
-            <img class="handwork__image-itn" src="https://via.placeholder.com/150x150"
-                  width="40" height="62" alt="Предметы интерьера">
+            <img class="handwork__image-itn" src="https://via.placeholder.com/150x150" width="40" height="62"
+              alt="Предметы интерьера">
           </div>
         </a>
         <a href="catalog.html" class="handwork__toys">
           <div class="handwork__inner handwork__flex-g">
             <p class="handwork__category">Детские игрушки</p>
-            <img class="handwork__image-toys" src="https://via.placeholder.com/150x150"
-                  width="60" height="60" alt="Детские игрушки">
+            <img class="handwork__image-toys" src="https://via.placeholder.com/150x150" width="60" height="60"
+              alt="Детские игрушки">
           </div>
         </a>
       </div>
     </section>
 
-<!-- Секция вязаных корзинок -->
+    <!-- Секция вязаных корзинок -->
     <section class="baskets">
       <div class="baskets__inner">
         <div class="baskets__wrapper">
@@ -129,8 +129,8 @@
               </table>
             </div>
             <img class="baskets__image" src="img/triple-set-mobile@1x.jpg"
-                  srcset="img/triple-set-mobile@1x.jpg 767w, img/triple-set-tablet@1x.jpg 1149w, img/triple-set-desktop@1x.jpg"
-                  alt="Вязаные корзинки">
+              srcset="img/triple-set-mobile@1x.jpg 767w, img/triple-set-tablet@1x.jpg 1149w, img/triple-set-desktop@1x.jpg"
+              alt="Вязаные корзинки">
             <div class="baskets__order">
               <p class="baskets__price">Цена: 990 руб.</p>
               <button class="baskets__to-order-btn button" type="button">Заказать</button>
@@ -140,40 +140,40 @@
       </div>
     </section>
 
-<!-- Секция о нас -->
+    <!-- Секция о нас -->
     <section class="about-us">
       <div class="about-us__inner">
         <div class="about-us__wrapper">
           <h2 class="about-us__title title">Коротко о нас:</h2>
           <ul class="about-us__list">
             <li class="about-us__item">
-              <img class="about-us__image" src="https://via.placeholder.com/150x150"
-                    width="32" height="37" alt="Экологически чистые материалы">
+              <img class="about-us__image" src="https://via.placeholder.com/150x150" width="32" height="37"
+                alt="Экологически чистые материалы">
               <p class="about-us__text">Экологически чистые материалы</p>
             </li>
             <li class="about-us__item">
-              <img class="about-us__image" src="https://via.placeholder.com/150x150"
-                    width="47" height="27" alt="Скандинавский стиль по российской цене">
+              <img class="about-us__image" src="https://via.placeholder.com/150x150" width="47" height="27"
+                alt="Скандинавский стиль по российской цене">
               <p class="about-us__text">Скандинавский стиль по российской цене</p>
             </li>
             <li class="about-us__item">
-              <img class="about-us__image" src="https://via.placeholder.com/150x150"
-                    width="34" height="27" alt="Увеличивает лайкина фотографиях">
+              <img class="about-us__image" src="https://via.placeholder.com/150x150" width="34" height="27"
+                alt="Увеличивает лайкина фотографиях">
               <p class="about-us__text">Увеличивает лайки на фотографиях</p>
             </li>
             <li class="about-us__item">
-              <img class="about-us__image" src="https://via.placeholder.com/150x150"
-                    width="35" height="34" alt="Связано вручную с любовью и умилением">
+              <img class="about-us__image" src="https://via.placeholder.com/150x150" width="35" height="34"
+                alt="Связано вручную с любовью и умилением">
               <p class="about-us__text">Связано вручную с любовью и умилением</p>
             </li>
             <li class="about-us__item">
-              <img class="about-us__image" src="https://via.placeholder.com/150x150"
-                    width="55" height="23" alt="Поддержка отечественного производителя">
+              <img class="about-us__image" src="https://via.placeholder.com/150x150" width="55" height="23"
+                alt="Поддержка отечественного производителя">
               <p class="about-us__text">Поддержка отечественного производителя</p>
             </li>
             <li class="about-us__item">
-              <img class="about-us__image" src="https://via.placeholder.com/150x150"
-                    width="33" height="32" alt="Поставляется в подарочной упаковке">
+              <img class="about-us__image" src="https://via.placeholder.com/150x150" width="33" height="32"
+                alt="Поставляется в подарочной упаковке">
               <p class="about-us__text">Поставляется в подарочной упаковке</p>
             </li>
           </ul>
@@ -181,7 +181,7 @@
       </div>
     </section>
 
-<!-- Секция отзывов -->
+    <!-- Секция отзывов -->
     <section class="reviews">
       <div class="reviews__inner">
         <div class="reviews__wrapper">
@@ -207,7 +207,7 @@
       </div>
     </section>
 
-<!-- Секция контактов -->
+    <!-- Секция контактов -->
     <section class="contacts">
       <div class="contacts__inner">
         <div class="contacts__wrapper">
@@ -230,10 +230,9 @@
           </div>
           <div class="contacts__map">
             <img class="contacts__image" src="img/map-mobile@1x.jpg"
-                  srcset="img/map-mobile@1x.jpg 767w, img/map-tablet@1x.jpg 1149w, img/map-desktop@1x.jpg"
-                  alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
-            <img class="contacts__pin" src="https://via.placeholder.com/150x150" alt="Контакты"
-                  width="100" height="67">
+              srcset="img/map-mobile@1x.jpg 767w, img/map-tablet@1x.jpg 1149w, img/map-desktop@1x.jpg"
+              alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
+            <img class="contacts__pin" src="https://via.placeholder.com/150x150" alt="Контакты" width="100" height="67">
           </div>
           <button class="contacts__btn button">Напишите нам</button>
         </div>
@@ -271,8 +270,8 @@
       <div class="footer__copyright copyright">
         <b class="copyright__text">Разработано</b>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="footer__image" src="https://via.placeholder.com/150x150"
-                width="27" height="34" alt="HTML Academy">
+          <img class="footer__image" src="https://via.placeholder.com/150x150" width="27" height="34"
+            alt="HTML Academy">
         </a>
       </div>
     </div>
@@ -285,14 +284,11 @@
       <fieldset class="modal__fieldset">
         <legend class="modal__legend">Выберите размер:</legend>
         <div class="modal__sizes">
-          <input class="modal__input visually-hidden"
-                  value="size-s" id="size-s" type="radio" name="size" checked>
+          <input class="modal__input visually-hidden" value="size-s" id="size-s" type="radio" name="size" checked>
           <label class="modal__size" for="size-s">S</label>
-          <input class="modal__input visually-hidden"
-                  value="size-m" id="size-m" type="radio" name="size">
+          <input class="modal__input visually-hidden" value="size-m" id="size-m" type="radio" name="size">
           <label class="modal__size" for="size-m">M</label>
-          <input class="modal__input visually-hidden"
-                  value="size-l" id="size-l" type="radio" name="size">
+          <input class="modal__input visually-hidden" value="size-l" id="size-l" type="radio" name="size">
           <label class="modal__size" for="size-l">L</label>
         </div>
       </fieldset>
