--- a/source/form.html
+++ b/source/form.html
@@ -1,211 +1,207 @@
 <!doctype html>
 <div lang="ru">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Мишка - форма заказа: HTML Academy</title>
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Мишка - форма заказа: HTML Academy</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+  </head>
 
-<body>
+  <body>
 
-  <!-- Шапка сайта -->
-  <header class="header">
-    <div class="header__inner">
-      <nav class="header__menu menu">
-        <a class="header__logo logo" href="index.html">
-          <img class="logo__image" src="img/logo-mobile.svg"
-                srcset="img/logo-mobile.svg 767w,img/logo-tablet.svg 1149w,img/logo-desktop.svg"
-                alt="Логотип">
+    <!-- Шапка сайта -->
+    <header class="header">
+      <div class="header__inner">
+        <nav class="header__menu menu">
+          <a class="header__logo logo" href="index.html">
+            <img class="logo__image" src="img/logo-mobile.svg"
+              srcset="img/logo-mobile.svg 767w,img/logo-tablet.svg 1149w,img/logo-desktop.svg" alt="Логотип">
+          </a>
+          <button class="menu__btn" type="button" aria-label="Открыть меню">
+            <span class="menu__line"></span>
+            <span class="menu__line"></span>
+            <span class="menu__line"></span>
+          </button>
+          <ul class="menu__list menu__list-catalog-order">
+            <li class="menu__item">
+              <a class="menu__link menu__link-catalog" href="catalog.html">Каталог товаров</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link menu__link-order">Вязание на заказ</a>
+            </li>
+          </ul>
+          <ul class="menu__list menu__list-search-basket">
+            <li class="menu__item">
+              <a class="menu__link menu__link-search" href="#">Поиск по сайту</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link menu__link-basket" href="#">Корзина: пока пуста</a>
+            </li>
+          </ul>
+          <ul class="menu__list menu__list-new">
+            <li class="menu__item">
+              <a class="menu__link menu__link-new" href="#">Новые поступления</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link menu__link-new" href="#">Распродажа</a>
+            </li>
+          </ul>
+          <ul class="menu__list menu__list-delivery">
+            <li class="menu__item">
+              <a class="menu__link menu__link-delivery">Бесплатная доставка по России</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <!-- Основной контент сайта -->
+    <main class="main">
+
+      <!-- Для ридера -->
+      <h1 class="visually-hidden">Интернет-магазин Мишка - форма заказа</h1>
+
+      <div class="form__title-page">
+        <p class="form__page-text">Вязание на заказ</p>
+      </div>
+
+      <!-- Секция формы заказа -->
+      <section class="form">
+        <div class="form__inner">
+          <p class="form__text">
+            Мы будем рады воплотить в жизнь ваши пожелания!
+            Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.
+          </p>
+        </div>
+        <form action="https://echo.htmlacademy.ru">
+          <div class="form__fieldset">
+            <div class="form__inner">
+              <p class="form__legend form__legend-line">Тип</p>
+              <div class="form__radio">
+                <div class="form__interior">
+                  <input class="visually-hidden" id="interior" type="radio" name="type" value="interior" checked>
+                  <label class="form__style-text form__text-indentation" for="interior">
+                    Аксессуар для интерьера
+                  </label>
+                </div>
+                <div class="form__games">
+                  <input class="visually-hidden" id="games" type="radio" name="type" value="games">
+                  <label class="form__style-text form__text-indentation" for="games">
+                    Детская игрушка
+                  </label>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="form__fieldset form__fieldset-background">
+            <div class="form__inner">
+              <p class="form__legend form__legend-line">Цвет</p>
+              <div class="form__checkbox">
+                <input class="visually-hidden" id="white" name="color" value="white" type="checkbox" checked>
+                <label class="form__style-text form__text-indentation" for="white">Белый</label>
+                <input class="visually-hidden" id="gray" name="color" value="grey" type="checkbox" checked>
+                <label class="form__style-text form__text-indentation" for="gray">Серый</label>
+                <input class="visually-hidden" id="tiffany" name="color" value="tiffany" type="checkbox">
+                <label class="form__style-text form__text-indentation" for="tiffany">«Тиффани»</label>
+                <input class="visually-hidden" id="black" name="color" value="black" type="checkbox">
+                <label class="form__style-text form__text-indentation" for="black">Черный</label>
+                <input class="visually-hidden" id="pink" name="color" value="pink" type="checkbox">
+                <label class="form__style-text form__text-indentation" for="pink">Розовый</label>
+                <input class="visually-hidden" id="orange" name="color" value="orange" type="checkbox">
+                <label class="form__style-text form__text-indentation" for="orange">Оранжевый</label>
+              </div>
+            </div>
+          </div>
+          <div class="form__fieldset">
+            <div class="form__inner">
+              <p class="form__legend form__legend-line">Фио</p>
+              <div class="form__name">
+                <div class="form__first-name">
+                  <label class="form__style-text form__text-mb" for="first-name">Имя:</label>
+                  <input class="form__placeholder form__placeholder-mb" id="first-name" type="text"
+                    placeholder="Введите ваше имя*">
+                </div>
+                <div class="form__last-name">
+                  <label class="form__style-text form__text-mb" for="last-name">Фамилия:</label>
+                  <input class="form__placeholder form__placeholder-mb" id="last-name" type="text"
+                    placeholder="Укажите фамилию*">
+                </div>
+                <div class="form__father-name">
+                  <label class="form__style-text form__text-mb" for="father-name">Отчество:</label>
+                  <input class="form__placeholder" id="father-name" type="text" placeholder="Отчество, если желаете">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="form__fieldset form__fieldset-background">
+            <div class="form__inner form__inner-column">
+              <div class="form__wrapper-phone">
+                <p class="form__legend form__legend-line">Тел</p>
+                <label for="number-phone"></label>
+                <input class="form__placeholder form__placeholder-tel" id="number-phone" type="tel"
+                  pattern="2[0-9]{3}-[0-9]{3}" placeholder="+7 XXX XXX XX XX*" required>
+              </div>
+              <div class="form__wrapper-email">
+                <p class="form__legend form__legend-line">Email</p>
+                <label for="email"></label>
+                <input class="form__placeholder form__placeholder-email" id="email" type="email"
+                  placeholder="Ваш Email*" required>
+              </div>
+            </div>
+          </div>
+          <div class="form__fieldset">
+            <div class="form__inner">
+              <p class="form__legend form__legend-line">Доп</p>
+              <label class="form__textarea">
+                <textarea class="form__textarea-text" name="form-text" id="form-text"
+                  placeholder="Опишите все ваши пожелания к заказу"></textarea>
+              </label>
+            </div>
+          </div>
+          <div class="form__inner form__inner-required">
+            <small class="form__require"><sup>*</sup>Поля обязательны для заполнения</small>
+            <button class="form__btn button" type="submit">Отправить заказ</button>
+          </div>
+        </form>
+      </section>
+
+    </main>
+
+    <!-- Подвал сайта -->
+    <footer class="footer">
+      <div class="footer__inner">
+        <a class="footer__logo-link" href="index.html">
+          <img class="footer__logo" src="img/logo-footer.svg" alt="Логотип Мишка">
         </a>
-        <button class="menu__btn" type="button" aria-label="Открыть меню">
-          <span class="menu__line"></span>
-          <span class="menu__line"></span>
-          <span class="menu__line"></span>
-        </button>
-        <ul class="menu__list menu__list-catalog-order">
-          <li class="menu__item">
-            <a class="menu__link menu__link-catalog" href="catalog.html">Каталог товаров</a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link menu__link-order">Вязание на заказ</a>
-          </li>
-        </ul>
-        <ul class="menu__list menu__list-search-basket">
-          <li class="menu__item">
-            <a class="menu__link menu__link-search" href="#">Поиск по сайту</a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link menu__link-basket" href="#">Корзина: пока пуста</a>
-          </li>
-        </ul>
-        <ul class="menu__list menu__list-new">
-          <li class="menu__item">
-            <a class="menu__link menu__link-new" href="#">Новые поступления</a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link menu__link-new" href="#">Распродажа</a>
-          </li>
-        </ul>
-        <ul class="menu__list menu__list-delivery">
-          <li class="menu__item">
-            <a class="menu__link menu__link-delivery">Бесплатная доставка по России</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-
-  <!-- Основной контент сайта -->
-  <main class="main">
-
-    <!-- Для ридера -->
-    <h1 class="visually-hidden">Интернет-магазин Мишка - форма заказа</h1>
-
-    <div class="form__title-page">
-      <p class="form__page-text">Вязание на заказ</p>
-    </div>
-
-<!-- Секция формы заказа -->
-    <section class="form">
-      <div class="form__inner">
-        <p class="form__text">
-          Мы будем рады воплотить в жизнь ваши пожелания!
-          Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.
-        </p>
+        <div class="footer__social social">
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="social__link social__link-instagram" href="#" aria-label="Инстаграм">
+                <img src="https://via.placeholder.com/150x150" alt="Наш инстаграм" width="22" height="21"></a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link-facebook" href="#" aria-label="Фейсбук">
+                <img src="https://via.placeholder.com/150x150" alt="Наш фейсбук" width="15" height="28"></a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link-twitter" href="#" aria-label="Твитер">
+                <img src="https://via.placeholder.com/150x150" alt="Наш твиттер" width="23" height="20"></a>
+            </li>
+          </ul>
+        </div>
+        <hr class="footer__line line">
+        <div class="footer__copyright copyright">
+          <b class="copyright__text">Разработано</b>
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+            <img class="footer__image" src="https://via.placeholder.com/150x150" width="27" height="34"
+              alt="HTML Academy">
+          </a>
+        </div>
       </div>
-      <form action="https://echo.htmlacademy.ru">
-        <div class="form__fieldset">
-          <div class="form__inner">
-            <p class="form__legend form__legend-line">Тип</p>
-            <div class="form__radio">
-              <div class="form__interior">
-                <input class="visually-hidden" id="interior" type="radio" name="type" value="interior" checked>
-                <label class="form__style-text form__text-indentation" for="interior">
-                  Аксессуар для интерьера
-                </label>
-              </div>
-              <div class="form__games">
-                <input class="visually-hidden" id="games" type="radio" name="type" value="games">
-                <label class="form__style-text form__text-indentation" for="games">
-                  Детская игрушка
-                </label>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="form__fieldset form__fieldset-background">
-          <div class="form__inner">
-            <p class="form__legend form__legend-line">Цвет</p>
-            <div class="form__checkbox">
-              <input class="visually-hidden" id="white" name="color" value="white" type="checkbox" checked>
-              <label class="form__style-text form__text-indentation" for="white">Белый</label>
-              <input class="visually-hidden" id="gray" name="color" value="grey" type="checkbox" checked>
-              <label class="form__style-text form__text-indentation" for="gray">Серый</label>
-              <input class="visually-hidden" id="tiffany" name="color" value="tiffany" type="checkbox">
-              <label class="form__style-text form__text-indentation" for="tiffany">«Тиффани»</label>
-              <input class="visually-hidden" id="black" name="color" value="black" type="checkbox">
-              <label class="form__style-text form__text-indentation" for="black">Черный</label>
-              <input class="visually-hidden" id="pink" name="color" value="pink" type="checkbox">
-              <label class="form__style-text form__text-indentation" for="pink">Розовый</label>
-              <input class="visually-hidden" id="orange" name="color" value="orange" type="checkbox">
-              <label class="form__style-text form__text-indentation" for="orange">Оранжевый</label>
-            </div>
-          </div>
-        </div>
-        <div class="form__fieldset">
-          <div class="form__inner">
-            <p class="form__legend form__legend-line">Фио</p>
-            <div class="form__name">
-              <div class="form__first-name">
-                <label class="form__style-text form__text-mb" for="first-name">Имя:</label>
-                <input class="form__placeholder form__placeholder-mb"
-                        id="first-name" type="text" placeholder="Введите ваше имя*">
-              </div>
-              <div class="form__last-name">
-                <label class="form__style-text form__text-mb" for="last-name">Фамилия:</label>
-                <input class="form__placeholder form__placeholder-mb"id="last-name" type="text" placeholder="Укажите фамилию*">
-              </div>
-              <div class="form__father-name">
-                <label class="form__style-text form__text-mb" for="father-name">Отчество:</label>
-                <input class="form__placeholder"
-                        id="father-name" type="text" placeholder="Отчество, если желаете">
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="form__fieldset form__fieldset-background">
-          <div class="form__inner form__inner-column">
-            <div class="form__wrapper-phone">
-              <p class="form__legend form__legend-line">Тел</p>
-              <label for="number-phone"></label>
-              <input class="form__placeholder form__placeholder-tel" id="number-phone" type="tel" pattern="2[0-9]{3}-[0-9]{3}" placeholder="+7 XXX XXX XX XX*" required>
-            </div>
-            <div class="form__wrapper-email">
-              <p class="form__legend form__legend-line">Email</p>
-              <label for="email"></label>
-              <input class="form__placeholder form__placeholder-email" id="email" type="email" placeholder="Ваш Email*" required>
-            </div>
-          </div>
-        </div>
-        <div class="form__fieldset">
-          <div class="form__inner">
-            <p class="form__legend form__legend-line">Доп</p>
-            <label class="form__textarea">
-              <textarea class="form__textarea-text" name="form-text" id="form-text"
-                          placeholder="Опишите все ваши пожелания к заказу"></textarea>
-            </label>
-          </div>
-        </div>
-        <div class="form__inner form__inner-required">
-          <small class="form__require"><sup>*</sup>Поля обязательны для заполнения</small>
-          <button class="form__btn button" type="submit">Отправить заказ</button>
-        </div>
-      </form>
-    </section>
+    </footer>
 
-  </main>
-
-  <!-- Подвал сайта -->
-  <footer class="footer">
-    <div class="footer__inner">
-      <a class="footer__logo-link" href="index.html">
-        <img class="footer__logo" src="img/logo-footer.svg" alt="Логотип Мишка">
-      </a>
-      <div class="footer__social social">
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link social__link-instagram" href="#" aria-label="Инстаграм">
-              <img src="https://via.placeholder.com/150x150"
-                    alt="Наш инстаграм" width="22" height="21"></a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link-facebook" href="#" aria-label="Фейсбук">
-              <img src="https://via.placeholder.com/150x150"
-                    alt="Наш фейсбук" width="15" height="28"></a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link-twitter" href="#" aria-label="Твитер">
-              <img src="https://via.placeholder.com/150x150"
-                    alt="Наш твиттер" width="23" height="20"></a>
-          </li>
-        </ul>
-      </div>
-      <hr class="footer__line line">
-      <div class="footer__copyright copyright">
-        <b class="copyright__text">Разработано</b>
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="footer__image"
-                src="https://via.placeholder.com/150x150"
-                width="27" height="34"
-                alt="HTML Academy">
-        </a>
-      </div>
-    </div>
-  </footer>
-
-</body>
+  </body>
