delete modal-add class

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -173,7 +173,7 @@
   </footer>
 
   <!-- Секция модального окна -->
-  <section class="modal-add modal">
+  <section class="modal">
     <div class="modal__overlay"></div>
     <div class="modal__content">
       <div class="modal__inner">
