--- a/source/catalog.html
+++ b/source/catalog.html
@@ -127,11 +127,13 @@
             <img class="catalog__video" src="img/video-mobile@1x.jpg"
               srcset="img/video-mobile@1x.jpg 767w, img/video-tablet@1x.jpg 1149w, img/video-desktop@1x.jpg" width="260"
               height="150" alt="Процесс производства">
-            <p class="catalog__text catalog__text-process">
-              По просьбам наших любимых фолловеров мы сняли
-              для вас подробное видео о том, как появляются наши товары.
-            </p>
-            <button class="catalog__btn button" type="button">Сделать заказ</button>
+            <div class="catalog__process-wrapper">
+              <p class="catalog__text catalog__text-process">
+                По просьбам наших любимых фолловеров мы сняли
+                для вас подробное видео о том, как появляются наши товары.
+              </p>
+              <button class="catalog__btn button" type="button">Сделать заказ</button>
+            </div>
           </li>
         </ul>
       </div>
