--- a/source/index.html
+++ b/source/index.html
@@ -35,7 +35,7 @@
           </li>
         </ul>
         <ul class="menu__list menu__list-search-basket">
-          <li class="menu__item">
+          <li class="menu__item menu__item-search">
             <a class="menu__link menu__link-search" href="#">Поиск по сайту</a>
           </li>
           <li class="menu__item">
