fix - in plural

--- a/source/form.html
+++ b/source/form.html
@@ -100,7 +100,7 @@
         <div class="form__fieldset form__fieldset-background">
           <div class="form__inner">
             <p class="form__legend form__legend-line">Цвет</p>
-            <div class="form__checkbox">
+            <div class="form__checkboxes">
               <input class="visually-hidden" id="white" name="color" value="white" type="checkbox" checked>
               <label class="form__style-text form__text-indentation" for="white">Белый</label>
               <input class="visually-hidden" id="gray" name="color" value="grey" type="checkbox" checked>
@@ -119,7 +119,7 @@
         <div class="form__fieldset">
           <div class="form__inner">
             <p class="form__legend form__legend-line">Фио</p>
-            <div class="form__name">
+            <div class="form__names">
               <div class="form__first-name">
                 <label class="form__style-text form__text-mb" for="first-name">Имя:</label>
                 <input class="form__placeholder form__placeholder-mb" id="first-name" type="text"
