fix search in menu

--- a/source/index.html
+++ b/source/index.html
@@ -34,9 +34,9 @@
             <a class="menu__link menu__link-order" href="form.html">Вязание на заказ</a>
           </li>
         </ul>
-        <ul class="menu__list menu__list-search-basket">
-          <li class="menu__item menu__item-search">
-            <a class="menu__link menu__link-search" href="#">Поиск по сайту</a>
+        <ul class="menu__list">
+          <li class="menu__item search">
+            <a class="menu__link search__link" href="#">Поиск по сайту</a>
           </li>
           <li class="menu__item">
             <a class="menu__link menu__link-basket" href="#">Корзина: пока пуста</a>
