--- a/source/index.html
+++ b/source/index.html
@@ -219,11 +219,10 @@
             </div>
             <div class="contacts__address">
               <p class="contacts__value">адрес:</p>
-              <p class="contacts__field">
-                г. Санкт-Петербург,<br>
-                ул. Большая Конюшенная,<br>
-                д. 19/8, офис 101
-              </p>
+              <div class="contacts__field">
+                <p class="contacts__city">г. Санкт-Петербург,</p> 
+                <p class="contacts__street">ул. Большая Конюшенная, д. 19/8, офис 101</p>
+              </div>
             </div>
           </div>
           <div class="contacts__map">
