:heavy_check_mark: Сборка #13

--- a/13/form.html
+++ b/13/form.html
@@ -35,9 +35,9 @@
             <a class="menu__link menu__link-order">Вязание на заказ</a>
           </li>
         </ul>
-        <ul class="menu__list menu__list-search-basket">
-          <li class="menu__item">
-            <a class="menu__link menu__link-search" href="#">Поиск по сайту</a>
+        <ul class="menu__list">
+          <li class="menu__item search">
+            <a class="menu__link search__link" href="#">Поиск по сайту</a>
           </li>
           <li class="menu__item">
             <a class="menu__link menu__link-basket" href="#">Корзина: пока пуста</a>
@@ -101,7 +101,7 @@
         <div class="form__fieldset form__fieldset-background">
           <div class="form__inner">
             <p class="form__legend form__legend-line">Цвет</p>
-            <div class="form__checkbox">
+            <div class="form__checkboxes">
               <input class="visually-hidden" id="white" name="color" value="white" type="checkbox" checked>
               <label class="form__style-text form__text-indentation" for="white">Белый</label>
               <input class="visually-hidden" id="gray" name="color" value="grey" type="checkbox" checked>
@@ -120,7 +120,7 @@
         <div class="form__fieldset">
           <div class="form__inner">
             <p class="form__legend form__legend-line">Фио</p>
-            <div class="form__name">
+            <div class="form__names">
               <div class="form__first-name">
                 <label class="form__style-text form__text-mb" for="first-name">Имя:</label>
                 <input class="form__placeholder form__placeholder-mb" id="first-name" type="text"
