--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,7 @@
   <!-- Шапка сайта -->
   <header class="header">
     <div class="header__inner">
-      <nav class="header__menu menu">
+      <nav class="header__menu menu menu__closed menu__no-js">
         <a class="header__logo logo">
           <img class="logo__image" src="img/logo-mobile.svg"
             srcset="img/logo-mobile.svg 767w,img/logo-tablet.svg 1149w,img/logo-desktop.svg" alt="Логотип">
@@ -34,7 +34,7 @@
             <a class="menu__link menu__link-order" href="form.html">Вязание на заказ</a>
           </li>
         </ul>
-        <ul class="menu__list">
+        <ul class="menu__list menu__list-search">
           <li class="menu__item search">
             <a class="menu__link search__link" href="#">Поиск по сайту</a>
           </li>
@@ -294,6 +294,8 @@
         </div>
     </div>
   </section>
+
+<script src="js/menu.js"></script>
 
 </body>
 
